# TRPL_tutorials_code

./: Cargo.toml  Readme.md
02_guessing_game/02_guessing_game_multi/: Cargo.toml
02_guessing_game/02_guessing_game_multi/src/: main.rs
02_guessing_game/02_guessing_game_once/: Cargo.toml
02_guessing_game/02_guessing_game_once/src/: main.rs
03_concept/03_compound_types/src/: main.rs
03_concept/03_control_flow/src/: main.rs
03_concept/03_functions/src/: main.rs
03_concept/03_types/src/: main.rs
03_concept/03_variables/src/: main.rs
04_ownership/04_owner/src/: main.rs
04_ownership/04_reference/src/: main.rs
04_ownership/04_slice/src/: main.rs
05_struct/05_define_struct/src/: main.rs
05_struct/05_struct_method/src/: lib.rs  main.rs
06_pattern_matching/06_enum_type/src/: main.rs
06_pattern_matching/06_pattern/src/: main.rs
07_managing_project/07_my_project/src/: lib.rs
07_managing_project/07_use_scope/: Cargo.toml
07_managing_project/07_use_scope/src/: lib.rs  main.rs
08_collections/08_hashmap/src/: main.rs
08_collections/08_string/src/: main.rs
08_collections/08_vector/src/: main.rs
09_error_handling/09_error_with_result/: Cargo.toml
09_error_handling/09_error_with_result/src/: main.rs
09_error_handling/09_panic_error_handling/: Cargo.toml
09_error_handling/09_panic_error_handling/src/: main.rs
10_generic_types/10_extract_function/src/: main.rs
10_generic_types/10_generic_function/src/: main.rs
10_generic_types/10_lifetime_demo1/: Cargo.toml
10_generic_types/10_lifetime_demo1/src/: main.rs
10_generic_types/10_trait_default_impl_call_demo/: Cargo.toml
10_generic_types/10_trait_default_impl_call_demo/src/: lib.rs  main.rs
10_generic_types/10_trait_default_impl_demo/: Cargo.toml
10_generic_types/10_trait_default_impl_demo/src/: lib.rs  main.rs
10_generic_types/10_trait_demo/src/: lib.rs  main.rs
11_automic_test/11_test_adder/src/: lib.rs
11_automic_test/11_test_adder/tests/: another_integration_test.rs  integration_test.rs
12_command_program/12_mini_grep/src/: lib.rs  main.rs
13_functional_features/13_closure_demo/src/: main.rs
13_functional_features/13_closure_iter/: Cargo.toml
13_functional_features/13_closure_iter/src/: main.rs
13_functional_features/13_closure_with_generic_params/: Cargo.toml
13_functional_features/13_closure_with_generic_params/src/: main.rs
13_functional_features/13_mini_grep_closure/: Cargo.toml
13_functional_features/13_mini_grep_closure/src/: lib.rs  main.rs
14_crate_io/14_add_one/src/: lib.rs
14_crate_io/14_adder/: Cargo.toml
14_crate_io/14_export_with_pub_use/: Cargo.toml
14_crate_io/14_export_with_pub_use/src/: lib.rs  main.rs
15_smart_point/15_box_demo/src/: main.rs
15_smart_point/15_deref_trait_demo/: Cargo.toml
15_smart_point/15_deref_trait_demo/src/: main.rs
15_smart_point/15_drop_trait_demo/src/: main.rs
15_smart_point/15_rc_trait_demo/: Cargo.toml
15_smart_point/15_rc_trait_demo/src/: main.rs
15_smart_point/15_refcell_trait_demo/: Cargo.toml
15_smart_point/15_refcell_trait_demo/src/: lib.rs  main.rs
15_smart_point/15_reference_cycle_demo/: Cargo.toml
15_smart_point/15_reference_cycle_demo/src/: main.rs
15_smart_point/15_weak_trait_demo/: Cargo.toml
15_smart_point/15_weak_trait_demo/src/: main.rs
16_concurrency_demo/16_channel_demo/src/: main.rs
16_concurrency_demo/16_mutex_demo/src/: main.rs
16_concurrency_demo/16_thread_demo/src/: main.rs
17_object_oriented_demo/17_encapsulation_demo/src/: lib.rs  main.rs
17_object_oriented_demo/17_oo_design_pattern/: Cargo.toml
17_object_oriented_demo/17_oo_design_pattern/src/: lib.rs  main.rs
17_object_oriented_demo/17_oo_state_as_type/: Cargo.toml
18_pattern_and_match/18_condition_if_let_demo/: Cargo.toml
19_advance_features_demo/19_advance_trait_demo/: Cargo.toml
19_advance_features_demo/19_advance_type_demo/: Cargo.toml
19_advance_features_demo/19_macro_demo/: Cargo.toml
19_advance_features_demo/19_raw_pointer_demo/: Cargo.toml
(+11 files in other folders)
