[workspace]

members = [
    "01_hello_world",
    "02_guessing_game/02_guessing_game_once",
    "02_guessing_game/02_guessing_game_multi",
    "03_concept/03_variables",
    "03_concept/03_types",
    "03_concept/03_compound_types",
    "03_concept/03_functions",
    "03_concept/03_control_flow",
    "04_ownership/04_owner",
    "04_ownership/04_reference",
    "04_ownership/04_slice",
    "05_struct/05_define_struct",
    "05_struct/05_struct_method",
    "06_pattern_matching/06_enum_type",
    "06_pattern_matching/06_pattern",
    "07_managing_project/07_my_project",
    "07_managing_project/07_use_scope",
    "08_collections/08_vector",
    "08_collections/08_string",
    "08_collections/08_hashmap",
]